correcton on the footer

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                 <button class="btn-lg">See More</button>
             </div>
         </div>
-        <div class="gallery">
+        <!-- <div class="gallery">
             <div class="img-gallery">
                 <img src="img/children-reading-space.jpg" alt="">                <h3>Pop Walls</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi qui eius quam provident!</p>
@@ -168,7 +168,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi qui eius quam provident!</p>
                 <button class="btn-lg">See More</button>
             </div>
-        </div>
+        </div> -->
     </div>
     <div class="footer">
         <p>&copy;<span>All rights reserved</span></p>
